--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body{
 
 }
 
-nav, #main, #aside{
+nav, main, aside{
 	margin: 0rem 1rem;
 }
 
@@ -66,7 +66,7 @@ nav ul {
 }
 
 
-#main{
+main{
 	grid-area: main;
 	display: flex;
 	flex-wrap: wrap;
@@ -101,7 +101,7 @@ img{
 	order: 1;
 }
 
-#aside{
+aside{
 	grid-area: aside;
 	border: 1px solid #c1c1c1;
   	border-radius: 20px;
